<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.myproject.mefinance.ActivityForm"
    android:id="@+id/coordinatorLayout"
    android:background="@color/colorTextIcons"
    >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/layout_income"
        android:visibility="gone"
        android:layout_marginTop="@dimen/action_bar_size"
        android:padding="16dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText"
            android:text="Income"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/income_amount"
            android:id="@+id/income_amount"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorDivider"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/income_name"
            android:id="@+id/income_name"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorDivider"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/income_description"
            android:id="@+id/income_description"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorDivider"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/layout_bill"
        android:visibility="gone"
        android:layout_marginTop="@dimen/action_bar_size"
        android:layout_gravity="center"
        android:padding="16dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText"
            android:text="Bill"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bill_paid_date"
            android:id="@+id/bill_paid_date"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorDivider"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bill_due_date"
            android:id="@+id/bill_due_date"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorDivider"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bill_name"
            android:id="@+id/bill_name"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorDivider"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bill_description"
            android:id="@+id/bill_description"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorDivider"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bill_amount"
            android:id="@+id/bill_amount"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorDivider"
            />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill_is_paid"
            android:id="@+id/bill_is_paid"
            android:layout_gravity="center"
            android:checked="false"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/layout_payment"
        android:visibility="gone"
        android:layout_marginTop="@dimen/action_bar_size"
        android:layout_gravity="center"
        android:padding="16dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText"
            android:text="Payment"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/payment_paid_date"
            android:id="@+id/payment_paid_date"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorDivider"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/payment_name"
            android:id="@+id/payment_name"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorDivider"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/payment_description"
            android:id="@+id/payment_description"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorDivider"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/payment_amount"
            android:id="@+id/payment_amount"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorDivider"
            />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />

</android.support.design.widget.CoordinatorLayout>
