<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.myproject.mefinance.ActivityData"
    android:id="@+id/coordinatorLayout"
    android:background="@color/colorTextIcons"
    >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/action_bar_size"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:fillViewport="true"
                android:layout_gravity="center"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:text="Hola Mundo"
                    android:textSize="24sp"
                    android:textAlignment="center"
                    android:layout_marginTop="16dp"
                    />

                <Button
                    android:id="@+id/btn_income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    style="?android:attr/borderlessButtonStyle"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp"
                    android:text="@string/lbl_btn_income"
                    android:layout_marginTop="24dp"
                    android:onClick="manageIncome"
                    android:textSize="17sp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    />
                <Button
                    android:id="@+id/btn_bill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    style="?android:attr/borderlessButtonStyle"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp"
                    android:text="@string/lbl_btn_bill"
                    android:layout_marginTop="24dp"
                    android:onClick="manageBill"
                    android:textSize="17sp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    />
                <Button
                    android:id="@+id/btn_payment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    style="?android:attr/borderlessButtonStyle"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp"
                    android:text="@string/lbl_btn_payment"
                    android:layout_marginTop="24dp"
                    android:onClick="managePayment"
                    android:textSize="17sp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />

</android.support.design.widget.CoordinatorLayout>
